<resources>
    <string name="app_name">QuizApp</string>
    <string name="question_1">Question 1</string>
    <string name="to_be_or_not_to_be">To be,or not to be...</string>
    <string name="to_be">To be</string>
    <string name="nor_to_be">Nor to be</string>
    <string name="i_don_t_know">I don\'t know</string>
    <string name="it_s_not_my_problem">it\'s not my problem</string>
    <string name="that_is_the_question">...that is the question</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tallest_skyscraper">Tallest skyscraper:</string>
    <string name="shanghai_tower_shanghai">Shanghai Tower,Shanghai</string>
    <string name="burj_khalifa_dubai">Burj Khalifa,Dubai</string>
    <string name="trump_international_hotel_chicago">Trump International Hotel,Chicago</string>
    <string name="central_park_tower_new_york">Central Park Tower,New York</string>
    <string name="eiffel_tower_pairs">Eiffel Tower,Pairs</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="the_biggest_animal">The biggest animal:</string>
    <string name="cat">Cat</string>
    <string name="elephant">Elephant</string>
    <string name="kitti_s_hog_nosed_bat">Kitti\'s hog-nosed bat</string>
    <string name="antarctic_blue_whale">Antarctic blue whale</string>
    <string name="human">Human</string>
    <string name="what_s_superfluous">What\'s superfluous?</string>
    <string name="discord">Discord</string>
    <string name="slack">Slack</string>
    <string name="microsoftteams">MicrosoftTeams</string>
    <string name="kotlin">Kotlin</string>
    <string name="telegram">Telegram</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="the_answer_to_the_ultimate_question_of_life_the_universe_and_everythig_is">The Answer to the Ultimate Question of Life,the Universe, and Everythig is:</string>
    <string name="_33">33</string>
    <string name="_11">11</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_42">42</string>
    <string name="submit">Submit</string>
    <string name="your_result">Your result:</string>
    <string name="bb">20%</string>
</resources>