<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity4"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/arrow_back_ios_24"
            android:layout_marginStart="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textColor="@color/black"
            android:padding="8dp"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/what_s_superfluous"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        />

    <Button
        android:id="@+id/next_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:elevation="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_bar_layout"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />


    <Button
        android:id="@+id/nextInvisible4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:elevation="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_bar_layout"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />


    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/previous"
        android:elevation="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_bar_layout"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />

    <RadioGroup
        android:id="@+id/radio_group4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="UselessLeaf"
        >

        <RadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discord"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slack"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kotlin"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/microsoftteams"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telegram"
            android:textColor="@color/black"
            />


    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group4"
        />

</androidx.constraintlayout.widget.ConstraintLayout>