<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/to_be_or_not_to_be"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        />

    <Button
        android:id="@+id/next_id_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:elevation="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_bar_layout"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />

   <Button
        android:id="@+id/next_id_invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:elevation="10dp"
        android:textColor="@color/black"
       android:visibility="visible"
       android:backgroundTint="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_bar_layout"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />


    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/previous"
        android:elevation="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_bar_layout"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="UselessLeaf"
        >

        <RadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_be"
            android:buttonTint="@drawable/question_clicked"
            android:textColor="@color/black"
            tools:ignore="UnusedAttribute"
            />

        <RadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@drawable/question_clicked"
            android:text="@string/nor_to_be"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@drawable/question_clicked"
            android:text="@string/i_don_t_know"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@drawable/question_clicked"
            android:text="@string/it_s_not_my_problem"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/radio_btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@drawable/question_clicked"
            android:text="@string/that_is_the_question"
            android:textColor="@color/black"
            />


    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />


</androidx.constraintlayout.widget.ConstraintLayout>